fixed vertical alignment of header&value eg Latitude

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@
 /* debug mode - everything visible */
 /* * { background-color:rgba(255,0,128,0.1); }  */
 
-.inCollapse:not(.true) > * { display:none ; }
+
 
 .App {
     display: flex;
