--- a/src/components/IndividualEditor.css
+++ b/src/components/IndividualEditor.css
@@ -26,8 +26,8 @@ li.noPad { padding-right:0; }
 /* .literalView { flex:none !important; } */
 .literalView > div:first-child:last-child { width:calc(100% - 20px); }
 
-
-.plusBut,.remoBut { position:relative !important; margin-top:10px !important;display:flex;align-items:top;right:0 !important;}
+button.removeButton { height:36px;}
+.plusBut,.remoBut { position:relative !important; margin-top:0px !important;display:flex;align-items:center;right:0 !important;}
 /* .remoBut.ind { margin-right:24px; } */
 
 .Pane2 .individualView > ul, .inCollapse > div > div > div,
@@ -37,3 +37,6 @@ li.noPad { padding-right:0; }
 
 .RDFCompo > ul > li { padding:0; }
 .RDFCompo > ul > li > div > div { padding:12px 16px 12px 16px !important; }
+
+
+.inCollapse:not(.true) > * { display:none ; }
